<?xml version="1.0"?>
<package>
  <name>odom_based_3d_slam</name>
  <version>0.0.0</version>

  <description>
    This is a ROS implementation of 3D mapping, based on wheel odometry.
    Developing...     
  </description>

  <maintainer email="tan_you_liang@hotmail.com">Tan You Liang</maintainer>

  <license>BSD</license>

  <author email="tan_you_liang@hotmail.com">Tan You Liang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

  <export>
  </export>
</package>
